[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "line-twin"
version = "0.1.0"
description = "A digital twin of a serial production line: part flow, finite buffers, bottleneck detection and live throughput/WIP."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["digital-twin", "production-line", "bottleneck", "throughput",
            "discrete-event-simulation", "manufacturing", "industry-4-0", "oee"]
dependencies = []

[project.optional-dependencies]
assets = ["pillow>=10", "numpy>=1.24", "imageio[ffmpeg]>=2.30"]
dev = ["pytest>=7"]

[project.scripts]
linetwin = "linetwin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
